--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.5",
     "expo": "~36.0.0",
+    "node": "^13.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
-    "react-native": "^0.63.2",
+    "react-native": "^0.61.0",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
